[gd_scene load_steps=2 format=3 uid="uid://bq8x7r3yw5p4"]

[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="1_main_menu"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_main_menu")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/panel = Color(0.05, 0.05, 0.1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="TitleContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.7, 0.2, 1)
theme_override_font_sizes/font_size = 64
text = "NIGHTFALL ARENA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="Panel/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 20
text = "Sobrevive el mayor tiempo posible"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="PlayButton" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.2, 0.9, 0.2, 1)
theme_override_colors/font_pressed_color = Color(0.1, 0.7, 0.1, 1)
theme_override_font_sizes/font_size = 32
text = "JUGAR"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.9, 0.2, 0.2, 1)
theme_override_colors/font_pressed_color = Color(0.7, 0.1, 0.1, 1)
theme_override_font_sizes/font_size = 32
text = "SALIR"

